# personal_chief

./: .env  .gitignore  README.md  langgraph.json  pyproject.toml
app/: main.py
app/agent/: personal_chief.py
app/api/: chat.py
app/common/: logger.py
app/db/: personal_chief.db  personal_chief.db-shm  personal_chief.db-wal
app/models/: schemas.py
app/rag/: config_data.py  rag.py
app/rag/history/: file_history_store.py
app/rag/service/: reranker.py  vectore_stores.py  vision.py
app/rag/upload/: app_file_upload.py  knowledge_base.py  md5.txt
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
scripts/: test_dashscope.py
